{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 15,
  "lineage": "8ec91d6b-6229-e982-0c78-474ab319895c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:739870437205:instance/i-06e9d307a0dab7e1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e9d307a0dab7e1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9997098ae812568",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-54-236-60-242.compute-1.amazonaws.com",
            "public_ip": "54.236.60.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-06f0e94bc86ba90da",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02687aa31c9910252",
            "tags": {
              "NAME": "ETCD-0"
            },
            "tags_all": {
              "NAME": "ETCD-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0207a170f509ef479"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.k8s-sg",
            "aws_subnet.k8s-subnet",
            "aws_vpc.k8s-vpc",
            "data.aws_ami.latest-ec2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:739870437205:instance/i-06c30eabeac6e2d45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c30eabeac6e2d45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094948910fb1955ae",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-44-200-50-149.compute-1.amazonaws.com",
            "public_ip": "44.200.50.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00d4b1bad74454b49",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02687aa31c9910252",
            "tags": {
              "NAME": "ETCD-1"
            },
            "tags_all": {
              "NAME": "ETCD-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0207a170f509ef479"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.k8s-sg",
            "aws_subnet.k8s-subnet",
            "aws_vpc.k8s-vpc",
            "data.aws_ami.latest-ec2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:739870437205:instance/i-0e4356f0effa48d14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4356f0effa48d14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce0b6c8e14897fa3",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-238-221-252.compute-1.amazonaws.com",
            "public_ip": "3.238.221.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00a3b3c3384ce9e3b",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02687aa31c9910252",
            "tags": {
              "NAME": "ETCD-2"
            },
            "tags_all": {
              "NAME": "ETCD-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0207a170f509ef479"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.k8s-sg",
            "aws_subnet.k8s-subnet",
            "aws_vpc.k8s-vpc",
            "data.aws_ami.latest-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739870437205:internet-gateway/igw-0acfbd4a1308341ab",
            "id": "igw-0acfbd4a1308341ab",
            "owner_id": "739870437205",
            "vpc_id": "vpc-093c909212e407e73"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s-rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739870437205:route-table/rtb-0f66089853b7d4fbd",
            "id": "rtb-0f66089853b7d4fbd",
            "owner_id": "739870437205",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acfbd4a1308341ab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093c909212e407e73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s-gw",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s-rtable-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf8546c9028b203e",
            "route_table_id": "rtb-0f66089853b7d4fbd",
            "subnet_id": "subnet-02687aa31c9910252"
          },
          "dependencies": [
            "aws_internet_gateway.k8s-gw",
            "aws_route_table.k8s-rtable",
            "aws_subnet.k8s-subnet",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739870437205:security-group/sg-0207a170f509ef479",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0207a170f509ef479",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-sg",
            "name_prefix": "",
            "owner_id": "739870437205",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093c909212e407e73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739870437205:subnet/subnet-02687aa31c9910252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02687aa31c9910252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739870437205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-093c909212e407e73"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739870437205:vpc/vpc-093c909212e407e73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0485ac28467ebc0bb",
            "default_route_table_id": "rtb-0de86db5eedc86f6f",
            "default_security_group_id": "sg-01a9748d9939834ca",
            "dhcp_options_id": "dopt-0564dfac6180efb10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-093c909212e407e73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de86db5eedc86f6f",
            "owner_id": "739870437205"
          }
        }
      ]
    }
  ]
}